# food-journal

./: .gitignore  example-config.yaml  pyproject.toml
food_journal/: config.py  constants.py  db_migration.py  routes.py  security.py  server_appkeys.py
food_journal/cli/: __init__.py  ingredients.py  server.py  users.py
food_journal/data/: ingredients.py  users.py
food_journal/handlers/: __init__.py  entries.py  index.py  ingredients.py
food_journal/migrations/: 1_create_main_tables.sql
food_journal/static/: shortcut.js
food_journal/templates/: index.html
